# rag-production

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
src/: api.py  customlogger.py  models.py  pdf_utils.py  settings.py
src/chat/: chat.py  llm_models.py  qdrant.py
src/embedder/: client.py  processor.py
src/routers/: chat.py  qdrant.py
