[project]
name = "09-rag-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fitz>=0.0.1.dev2",
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langfuse>=3.14.5",
    "langgraph>=1.0.8",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.41.0",
]
